<?xml version="1.0"?>
<package format="2">
  <name>dpi-p3-ros</name>
  <version>0.1.0</version>
  <description>DPI Climate ROS source code for Pioneer 3 robot.</description>

  <maintainer email="harvey.bates@dpi.nsw.gov.au">Harvey Bates</maintainer>
  <maintainer email="allen.benter@dpi.nsw.gov.au">Allen Benter</maintainer>
  <maintainer email="david.a.taylor@dpi.nsw.gov.au">David Taylor</maintainer>
  <maintainer email="thomas.karbowiak@dpi.nsw.gov.au">Thomas Karbowiak</maintainer>
  <maintainer email="mal.kul@dpi.nsw.gov.au">Mal Kul</maintainer>
  <maintainer email="michael.middleton@dpi.nsw.gov.au">Michael Middleton</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/dpi-p3-ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
